[tool.poetry]
name = "cibercca"
version = "0.2.4"
description = "CiberC Code Automation - reports excel and json formats and save data in MongoDB"
authors = ["Verni Hernandez <verni.hernandez@ciberc.com>"]
license = "BSD 3-Clause License"

classifiers = [
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development",
    "Topic :: Terminals",
    "Topic :: Utilities",
    "Typing :: Typed",
]

[tool.poetry.dependencies]
python = "^3.8"
napalm = "3.3.1"
nornir = "3.2.0"
PyYAML = "6.0"
typer = "0.4.1"
tabulate = "0.8.9"
tqdm = "4.62.3"
ttp = "0.8.1"
hvac = "0.11.2"
pandas = "1.3.4"
openpyxl = "3.0.9"
netmiko = "3.4.0"
bcrypt = "4.1.3"
blinker = "1.8.2"
certifi = "2024.6.2"
cffi = "1.16.0"
charset-normalizer = "3.3.2"
ciscoconfparse = "1.9.41"
click = "8.1.7"
colorama = "0.4.6"
cryptography = "42.0.8"
Deprecated = "1.2.14"
dnspython = "2.6.1"
et-xmlfile = "1.1.0"
Flask = "3.0.3"
future = "1.0.0"
hier-config = "2.2.3"
idna = "3.7"
importlib-metadata = "4.13.0"
itsdangerous = "2.2.0"
Jinja2 = "3.1.4"
junos-eznc = "2.7.1"
loguru = "0.7.2"
lxml = "5.2.2"
MarkupSafe = "2.1.5"
mypy-extensions = "0.4.4"
ncclient = "0.6.15"
netaddr = "1.3.0"
ntc_templates = "5.1.0"
numpy = "1.26.4"
paramiko = "3.4.0"
passlib = "1.7.4"
pycparser = "2.22"
pyeapi = "1.0.2"
pymongo = "4.7.3"
PyNaCl = "1.5.0"
pyparsing = "3.1.2"
pyserial = "3.5"
python-dateutil = "2.9.0.post0"
pytz = "2024.1"
requests = "2.32.3"
scp = "0.15.0"
six = "1.16.0"
tenacity = "8.4.1"
textfsm = "1.1.3"
toml = "0.10.2"
transitions = "0.9.1"
typing-extensions = "3.10.0.2"
urllib3 = "2.2.2"
Werkzeug = "3.0.3"
win32-setctime = "1.1.0"
wrapt = "1.16.0"
yamlordereddictloader = "0.4.2"
zipp = "3.19.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
ciberc-ca = "cibercca.main:main"
